# lawson-quant-library

./: .gitignore  README.md  pyproject.toml
notebooks/: 1_eq_option_pricing_and_iv.ipynb  2_ir_curve_build.ipynb  3_eq_vol_surface.ipynb  3_eq_vol_surface_and_structures.ipynb  test.ipynb
src/lawson_quant_library/: __init__.py  util.py
src/lawson_quant_library/analytics/: vol_surface.py
src/lawson_quant_library/data/: yahoo_options.py
src/lawson_quant_library/instrument/: __init__.py  eq_option.py  fx_option.py  instrument.py  option.py  swap.py
src/lawson_quant_library/model/: __init__.py  bs_analytic_eq.py  gk_analytic_fx.py
src/lawson_quant_library/notebooks/: 3_eq_vol_surface_and_structures.ipynb  4_eq_skew_over_time.ipynb  eq_vol_surface.ipynb  option_structures_portfolio_risk_over_time.ipynb  test.ipynb
src/lawson_quant_library/options/: structures.py
src/lawson_quant_library/parameter/: __init__.py  curves.py  div_curve.py  fx_curve.py  ir_curve.py  parameter.py  vol.py
src/lawson_quant_library/portfolio/: portfolio.py  structures.py
src/lawson_quant_library/research/: structure_timeseries.py
src/lawson_quant_library/tests/: quick_tests.ipynb  test_portfolio.py  test_structures.py
tests/: quick_test.py  test_american_vs_european.py  test_market_csv.py  test_mc_convergence_to_bs.py  test_mc_se_scaling.py  test_model_swap.py  test_montecarlo_accuracy.py  test_option_chain_api_reader.py  test_qlib_mc_compare.py  test_reprice_dates.py  test_reprice_market_moves.py  test_vol_surface.py  test_vol_surface_reprice.py
(+14 files in other folders)
